@@ -1,33 +1,61 @@
 require 'reek/code_parser'
 
 module Reek
+
+  #
+  # A +Source+ object represents a chunk of Ruby source code.
+  #
+  # The various class methods are factories that will create +Source+
+  # instances from various types of input.
+  #
   class Source
+
+    #
+    # Factory method: creates a +Source+ object by reading Ruby code from
+    # the +IO+ stream. The stream is consumed upto end-of-file, but the
+    # source code is not parsed until +report+ is called. +desc+ provides
+    # a string description to be used in the header of formatted reports.
+    #
     def self.from_io(ios, desc)
       code = ios.readlines.join
       return new(code, desc)
     end
 
+    #
+    # Factory method: creates a +Source+ object by reading Ruby code from
+    # the +code+ string. The code is not parsed until +report+ is called.
+    #
     def self.from_s(code)
       return new(code, 'string')
     end
 
+    #
+    # Factory method: creates a +Source+ object by reading Ruby code from
+    # File +file+. The source code is not parsed until +report+ is called.
+    #
     def self.from_f(file)
       from_path(file.path)
     end
 
+    #
+    # Factory method: creates a +Source+ object by reading Ruby code from
+    # the named file. The source code is not parsed until +report+ is called.
+    #
     def self.from_path(filename)
       code = IO.readlines(filename).join
       return new(code, filename, File.dirname(filename))
     end
 
-    def initialize(code, desc, dir = '.')
+    def initialize(code, desc, dir = '.')     # :nodoc:
       @source = code
       @dir = dir
       @desc = desc
     end
 
     #
-    # Returns a +Report+ listing the smells found in this source.
+    # Returns a +Report+ listing the smells found in this source. The first
+    # call to +report+ parses the source code and constructs a list of
+    # +SmellWarning+s found; subsequent calls simply return this same list.
     #
     def report
       unless @report
@@ -42,8 +70,12 @@ module Reek
       report.length > 0
     end
 
-    def has_smell?(smell_sym, patterns)
-      report.any? { |smell| smell.matches?(smell_sym, patterns) }
+    #
+    # Checks this source for instances of +smell_class+, and returns +true+
+    # only if one of them has a report string matching all of the +patterns+.
+    #
+    def has_smell?(smell_class, patterns)
+      report.any? { |smell| smell.matches?(smell_class, patterns) }
     end
 
     def to_s
